git HEAD

    * efa: Fix odd encoding issues when using -w, -t, -d, -a and similar

Travel::Routing::DE::VRR 2.10 - Fri May 29 2015

    * efa: Changed -p/--proximity default walking time from 8 to 10 minutes
    * efa: The -p/--proximity option now takes an optional duration argument
    * EFA: use_near_stops now accepts an integer (interpreted as walking time
      in minutes) instead of a boolean value

Travel::Routing::DE::VRR 2.09 - Fri Jan 09 2015

    * Travel::Routing::DE::EFA::Exception::Ambiguous: Add post_value accessor
      which contains the ambiguous input value
    * Improve error messages
    * Add VRR2 and DING EFA services

Travel::Routing::DE::VRR 2.08 - Wed Oct 08 2014

    * efa: Add -l / --list option
    * efa: Add -s / --service option
    * Travel::Routing::DE::EFA::get_efa_urls() now returns a list of hashrefs
    * Documentation improvements

Travel::Routing::DE::VRR 2.07 - Fri Aug 08 2014

    * Add URLs for several austrian EFA services
      (pointed out by Gregor Herrmann)
    * Support EFA services which do not distinguish between scheduled
      and realtime data (also pointed out by Gregor Herrmann)
    * efa: Add -D/--discover option
    * efa: Add -A/--auto-url option
    * Travel::Routing::DE::EFA: Add get_efa_urls method
    * efa: Remove --post option from documentation (it has not been supported
      since version 1.04)

Travel::Routing::DE::VRR 2.06 - Sat Aug 02 2014

    * Route::Part: Add {arrival,departure}_{route,station}maps accessors
    * efa: Add -m / --maps option
    * Fix exclude / --exclude (didn't work at all previously, possibly
      because of a server-side API change)

Travel::Routing::DE::VRR 2.05 - Mon Mar 03 2014

    * Move all logic to Travel::Routing::DE::EFA and require an EFA url to
      be set. This way, any EFA service is supported.
      Travel::Routing::DE::VRR now calls ::EFA with the VRR url, so there are
      no backwards-incompatible changes